arreglo de menus que apuntan a secciones

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Educación</a>
+              <a class="nav-link" href="#educacion">Educación</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portafolio</a>
+              <a class="nav-link" href="#portafolio">Portafolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Experiencia</a>
+              <a class="nav-link" href="#experiencia">Experiencia</a>
             </li>
           </ul>
         </div>
@@ -49,7 +49,7 @@
       
     </section>
   </header>
-  <div class="education">
+  <div id="educacion"class="education">
     <h2>EDUCACIÓN</h2>
     <Table class="table d-flex justify-content-center">
       <tr>
@@ -79,7 +79,7 @@
   </Table>
 </div>
 
-  <div class="portfolio">
+  <div id="portafolio" class="portfolio">
     <h2 style="color: white;">PORTAFOLIO</h2>
     <div class="container text-center">
       <div class="row" style="justify-content: center;" >
@@ -145,7 +145,7 @@
     </div>
   
   </div>
-  <div class="expirience">
+  <div id="experiencia" class="expirience">
     <h2>EXPERIENCIA</h2>
     <Table class="table d-flex justify-content-center">
       <tr>
