--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="container text-center">
       <div class="row" style="justify-content: center;" >
         <div class="card" style="width: 18rem; margin: 10px;">
-          <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/d1 (1).png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Proyecto 1</h5>
             <div class="card-text">
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/cupon-2.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/d2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Proyecto 2</h5>
             <div class="card-text">
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/cupon-3.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/d3.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Proyecto 3</h5>
             <div class="card-text">
@@ -115,7 +115,7 @@
     <div class="container text-center">
       <div class="row" style="justify-content: center;">
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/cupon-4.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/d4.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Proyecto 4</h5>
             <div class="card-text">
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/cupon-5.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/git.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Proyecto 5</h5>
             <div class="card-text">
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/cupon-6.jpg" class="card-img-top" alt="...">
+          <img src="./assets/img/d4.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Proyecto 6</h5>
             <p class="fw-light">Portfolio</p>
@@ -196,7 +196,7 @@
   </section>
   <footer>
     <p > <strong>JOHAN MARCANO</strong> </p>
-    <p>© 2023 Johan Marcano .Todos los derechos reservados.</p>
+    <p>© 2023 Johan Marcano. Todos los derechos reservados.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
