--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="container text-center">
       <div class="row" style="justify-content: center;" >
         <div class="card" style="width: 18rem; margin: 10px;">
-          <img src="./assets/img/d1 (1).png" class="card-img-top" alt="...">
+          <a href="./assets/desafios/Curriculum Vitae/index.html"><img src="./assets/img/d1 (1).png"  class="card-img-top" alt="img desafio 1" ></a>
           <div class="card-body">
             <h5 class="card-title">Proyecto 1</h5>
             <div class="card-text">
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/d2.png" class="card-img-top" alt="...">
+          <a href="./assets/desafios/d2 - landing/index.html"><img src="./assets/img/d2.png" class="card-img-top" alt="img desafio 2"></a>
           <div class="card-body">
             <h5 class="card-title">Proyecto 2</h5>
             <div class="card-text">
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/d3.png" class="card-img-top" alt="...">
+          <a href="./assets/desafios/d3 - flex/index.html"><img src="./assets/img/d3.png" class="card-img-top" alt="img desafio 3"></a>
           <div class="card-body">
             <h5 class="card-title">Proyecto 3</h5>
             <div class="card-text">
@@ -115,7 +115,7 @@
     <div class="container text-center">
       <div class="row" style="justify-content: center;">
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/d4.png" class="card-img-top" alt="...">
+          <a href="./assets/desafios/d4 - bootstrap/index.html"><img src="./assets/img/d4.png" class="card-img-top" alt="img desafio 4"></a>
           <div class="card-body">
             <h5 class="card-title">Proyecto 4</h5>
             <div class="card-text">
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/git.png" class="card-img-top" alt="...">
+          <img src="./assets/img/git.png" class="card-img-top" alt="img desafio 5">
           <div class="card-body">
             <h5 class="card-title">Proyecto 5</h5>
             <div class="card-text">
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 20px;">
-          <img src="./assets/img/d4.png" class="card-img-top" alt="...">
+          <img src="./assets/img/d4.png" class="card-img-top" alt="img desafio 6">
           <div class="card-body">
             <h5 class="card-title">Proyecto 6</h5>
             <p class="fw-light">Portfolio</p>
